--- a/styles.css
+++ b/styles.css
@@ -59,10 +59,7 @@ body {
 
 button {
   border-radius: 15px;
-  border: 1px white solid;
+  border: none;
   padding: 5px 10px;
-}
-
-button:active {
-  width: 90%;
+  background-color: white;
 }
